@@ -1,5 +1,10 @@
 2006-08-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* include/thai/thctype.h, man/man3/thctype.3: Clarify character level
+	2 and 3 in the document.
+
+2006-08-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/thinp/thinp.c: Use WTTOp enum instead of int, as per recent
 	change in wtt.h
 
@@ -905,13 +910,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.92 2006-08-02 04:02:59 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.93 2006-08-02 05:10:05 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.92 2006-08-02 04:02:59 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.93 2006-08-02 05:10:05 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
